// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Select > renders basic case correctly 1`] = `
"<div data-v-cc4daab7="" class=""><select data-v-cc4daab7="" class=""></select>
  <!--v-if--><span data-v-cc4daab7="" class="absolute inset-y-0 end-0 flex items-center pointer-events-none px-2.5"><span data-v-cc4daab7="" class="i-heroicons-chevron-down-20-solid flex-shrink-0 text-gray-400 dark:text-gray-500 h-5 w-5" aria-hidden="true"></span></span>
</div>"
`;

exports[`Select > renders with custom color correctly 1`] = `
"<div data-v-cc4daab7="" class=""><select data-v-cc4daab7="" class="">
    <option data-v-cc4daab7="" value="opt1">Option 1</option>
    <option data-v-cc4daab7="" value="opt2">Option 2</option>
  </select>
  <!--v-if--><span data-v-cc4daab7="" class="absolute inset-y-0 end-0 flex items-center pointer-events-none px-2.5"><span data-v-cc4daab7="" class="i-heroicons-chevron-down-20-solid flex-shrink-0 text-gray-400 dark:text-gray-500 text-red-500 dark:text-red-400 h-5 w-5" aria-hidden="true"></span></span>
</div>"
`;

exports[`Select > renders with custom id correctly 1`] = `
"<div data-v-cc4daab7="" class=""><select data-v-cc4daab7="" id="mySelect" class=""></select>
  <!--v-if--><span data-v-cc4daab7="" class="absolute inset-y-0 end-0 flex items-center pointer-events-none px-2.5"><span data-v-cc4daab7="" class="i-heroicons-chevron-down-20-solid flex-shrink-0 text-gray-400 dark:text-gray-500 h-5 w-5" aria-hidden="true"></span></span>
</div>"
`;

exports[`Select > renders with custom name correctly 1`] = `
"<div data-v-cc4daab7="" class=""><select data-v-cc4daab7="" name="mySelectInput" class=""></select>
  <!--v-if--><span data-v-cc4daab7="" class="absolute inset-y-0 end-0 flex items-center pointer-events-none px-2.5"><span data-v-cc4daab7="" class="i-heroicons-chevron-down-20-solid flex-shrink-0 text-gray-400 dark:text-gray-500 h-5 w-5" aria-hidden="true"></span></span>
</div>"
`;

exports[`Select > renders with custom options correctly 1`] = `
"<div data-v-cc4daab7="" class=""><select data-v-cc4daab7="" class="">
    <option data-v-cc4daab7="" value="opt1">Option 1</option>
    <option data-v-cc4daab7="" value="opt2">Option 2</option>
  </select>
  <!--v-if--><span data-v-cc4daab7="" class="absolute inset-y-0 end-0 flex items-center pointer-events-none px-2.5"><span data-v-cc4daab7="" class="i-heroicons-chevron-down-20-solid flex-shrink-0 text-gray-400 dark:text-gray-500 h-5 w-5" aria-hidden="true"></span></span>
</div>"
`;

exports[`Select > renders with custom size correctly 1`] = `
"<div data-v-cc4daab7="" class=""><select data-v-cc4daab7="" class=""></select>
  <!--v-if--><span data-v-cc4daab7="" class="absolute inset-y-0 end-0 flex items-center pointer-events-none px-3.5"><span data-v-cc4daab7="" class="i-heroicons-chevron-down-20-solid flex-shrink-0 text-gray-400 dark:text-gray-500 h-5 w-5" aria-hidden="true"></span></span>
</div>"
`;

exports[`Select > renders with custom variant correctly 1`] = `
"<div data-v-cc4daab7="" class=""><select data-v-cc4daab7="" class=""></select>
  <!--v-if--><span data-v-cc4daab7="" class="absolute inset-y-0 end-0 flex items-center pointer-events-none px-2.5"><span data-v-cc4daab7="" class="i-heroicons-chevron-down-20-solid flex-shrink-0 text-gray-400 dark:text-gray-500 h-5 w-5" aria-hidden="true"></span></span>
</div>"
`;

exports[`Select > renders with disabled correctly 1`] = `
"<div data-v-cc4daab7="" class=""><select data-v-cc4daab7="" disabled="" class=""></select>
  <!--v-if--><span data-v-cc4daab7="" class="absolute inset-y-0 end-0 flex items-center pointer-events-none px-2.5"><span data-v-cc4daab7="" class="i-heroicons-chevron-down-20-solid flex-shrink-0 text-gray-400 dark:text-gray-500 h-5 w-5" aria-hidden="true"></span></span>
</div>"
`;

exports[`Select > renders with icon correctly 1`] = `"<div data-v-cc4daab7="" class=""><select data-v-cc4daab7="" class=""></select><span data-v-cc4daab7="" class="absolute inset-y-0 start-0 flex items-center pointer-events-none px-2.5"><span data-v-cc4daab7="" class="i-heroicons-academic-cap flex-shrink-0 text-gray-400 dark:text-gray-500 h-5 w-5"></span></span><span data-v-cc4daab7="" class="absolute inset-y-0 end-0 flex items-center pointer-events-none px-2.5"><span data-v-cc4daab7="" class="i-heroicons-chevron-down-20-solid flex-shrink-0 text-gray-400 dark:text-gray-500 h-5 w-5" aria-hidden="true"></span></span></div>"`;

exports[`Select > renders with leading + icon correctly 1`] = `
"<div data-v-cc4daab7="" class=""><select data-v-cc4daab7="" class="">
    <option data-v-cc4daab7="" value="opt1">Option 1</option>
    <option data-v-cc4daab7="" value="opt2">Option 2</option>
  </select><span data-v-cc4daab7="" class="absolute inset-y-0 start-0 flex items-center pointer-events-none px-2.5"><span data-v-cc4daab7="" class="i-heroicons-adjustments-vertical flex-shrink-0 text-gray-400 dark:text-gray-500 h-5 w-5"></span></span><span data-v-cc4daab7="" class="absolute inset-y-0 end-0 flex items-center pointer-events-none px-2.5"><span data-v-cc4daab7="" class="i-heroicons-chevron-down-20-solid flex-shrink-0 text-gray-400 dark:text-gray-500 h-5 w-5" aria-hidden="true"></span></span></div>"
`;

exports[`Select > renders with leading slot + iconName correctly 1`] = `
"<div data-v-cc4daab7="" class=""><select data-v-cc4daab7="" class="" iconname="i-heroicons-cloud">
    <option data-v-cc4daab7="" value="opt1">Option 1</option>
    <option data-v-cc4daab7="" value="opt2">Option 2</option>
  </select><span data-v-cc4daab7="" class="absolute inset-y-0 start-0 flex items-center pointer-events-none px-2.5">Leading slot</span><span data-v-cc4daab7="" class="absolute inset-y-0 end-0 flex items-center pointer-events-none px-2.5"><span data-v-cc4daab7="" class="i-heroicons-chevron-down-20-solid flex-shrink-0 text-gray-400 dark:text-gray-500 h-5 w-5" aria-hidden="true"></span></span></div>"
`;

exports[`Select > renders with leading slot correctly 1`] = `
"<div data-v-cc4daab7="" class=""><select data-v-cc4daab7="" class="">
    <option data-v-cc4daab7="" value="opt1">Option 1</option>
    <option data-v-cc4daab7="" value="opt2">Option 2</option>
  </select><span data-v-cc4daab7="" class="absolute inset-y-0 start-0 flex items-center pointer-events-none px-2.5">Leading slot</span><span data-v-cc4daab7="" class="absolute inset-y-0 end-0 flex items-center pointer-events-none px-2.5"><span data-v-cc4daab7="" class="i-heroicons-chevron-down-20-solid flex-shrink-0 text-gray-400 dark:text-gray-500 h-5 w-5" aria-hidden="true"></span></span></div>"
`;

exports[`Select > renders with leadingIcon correctly 1`] = `"<div data-v-cc4daab7="" class=""><select data-v-cc4daab7="" class=""></select><span data-v-cc4daab7="" class="absolute inset-y-0 start-0 flex items-center pointer-events-none px-2.5"><span data-v-cc4daab7="" class="i-heroicons-adjustments-vertical flex-shrink-0 text-gray-400 dark:text-gray-500 h-5 w-5"></span></span><span data-v-cc4daab7="" class="absolute inset-y-0 end-0 flex items-center pointer-events-none px-2.5"><span data-v-cc4daab7="" class="i-heroicons-chevron-down-20-solid flex-shrink-0 text-gray-400 dark:text-gray-500 h-5 w-5" aria-hidden="true"></span></span></div>"`;

exports[`Select > renders with loading correctly 1`] = `"<div data-v-cc4daab7="" class=""><select data-v-cc4daab7="" class=""></select><span data-v-cc4daab7="" class="absolute inset-y-0 start-0 flex items-center pointer-events-none px-2.5"><span data-v-cc4daab7="" class="i-heroicons-arrow-path-20-solid flex-shrink-0 text-gray-400 dark:text-gray-500 h-5 w-5 animate-spin"></span></span><span data-v-cc4daab7="" class="absolute inset-y-0 end-0 flex items-center pointer-events-none px-2.5"><span data-v-cc4daab7="" class="i-heroicons-chevron-down-20-solid flex-shrink-0 text-gray-400 dark:text-gray-500 h-5 w-5" aria-hidden="true"></span></span></div>"`;

exports[`Select > renders with loadingIcon correctly 1`] = `"<div data-v-cc4daab7="" class=""><select data-v-cc4daab7="" class=""></select><span data-v-cc4daab7="" class="absolute inset-y-0 start-0 flex items-center pointer-events-none px-2.5"><span data-v-cc4daab7="" class="i-heroicons-adjustments-horizontal flex-shrink-0 text-gray-400 dark:text-gray-500 h-5 w-5 animate-spin"></span></span><span data-v-cc4daab7="" class="absolute inset-y-0 end-0 flex items-center pointer-events-none px-2.5"><span data-v-cc4daab7="" class="i-heroicons-chevron-down-20-solid flex-shrink-0 text-gray-400 dark:text-gray-500 h-5 w-5" aria-hidden="true"></span></span></div>"`;

exports[`Select > renders with padded correctly 1`] = `
"<div data-v-cc4daab7="" class=""><select data-v-cc4daab7="" class="">
    <option data-v-cc4daab7="" value="opt1">Option 1</option>
    <option data-v-cc4daab7="" value="opt2">Option 2</option>
  </select>
  <!--v-if--><span data-v-cc4daab7="" class="absolute inset-y-0 end-0 flex items-center pointer-events-none px-2.5"><span data-v-cc4daab7="" class="i-heroicons-chevron-down-20-solid flex-shrink-0 text-gray-400 dark:text-gray-500 h-5 w-5" aria-hidden="true"></span></span>
</div>"
`;

exports[`Select > renders with placeholder correctly 1`] = `
"<div data-v-cc4daab7="" class=""><select data-v-cc4daab7="" class="">
    <option data-v-cc4daab7="" disabled="" value="">Select an option</option>
  </select>
  <!--v-if--><span data-v-cc4daab7="" class="absolute inset-y-0 end-0 flex items-center pointer-events-none px-2.5"><span data-v-cc4daab7="" class="i-heroicons-chevron-down-20-solid flex-shrink-0 text-gray-400 dark:text-gray-500 h-5 w-5" aria-hidden="true"></span></span>
</div>"
`;

exports[`Select > renders with trailing + icon correctly 1`] = `
"<div data-v-cc4daab7="" class=""><select data-v-cc4daab7="" class="">
    <option data-v-cc4daab7="" value="opt1">Option 1</option>
    <option data-v-cc4daab7="" value="opt2">Option 2</option>
  </select>
  <!--v-if--><span data-v-cc4daab7="" class="absolute inset-y-0 end-0 flex items-center pointer-events-none px-2.5"><span data-v-cc4daab7="" class="i-heroicons-chevron-down-20-solid flex-shrink-0 text-gray-400 dark:text-gray-500 h-5 w-5" aria-hidden="true"></span></span>
</div>"
`;

exports[`Select > renders with trailing correctly 1`] = `
"<div data-v-cc4daab7="" class=""><select data-v-cc4daab7="" class=""></select>
  <!--v-if--><span data-v-cc4daab7="" class="absolute inset-y-0 end-0 flex items-center pointer-events-none px-2.5"><span data-v-cc4daab7="" class="i-heroicons-chevron-down-20-solid flex-shrink-0 text-gray-400 dark:text-gray-500 h-5 w-5" aria-hidden="true"></span></span>
</div>"
`;

exports[`Select > renders with trailing icon correctly 1`] = `
"<div data-v-cc4daab7="" class=""><select data-v-cc4daab7="" class=""></select>
  <!--v-if--><span data-v-cc4daab7="" class="absolute inset-y-0 end-0 flex items-center pointer-events-none px-2.5"><span data-v-cc4daab7="" class="i-heroicons-archive-box flex-shrink-0 text-gray-400 dark:text-gray-500 h-5 w-5" aria-hidden="true"></span></span>
</div>"
`;

exports[`Select > renders with trailing slot + iconName correctly 1`] = `
"<div data-v-cc4daab7="" class=""><select data-v-cc4daab7="" class="" iconname="i-heroicons-bookmark-solid">
    <option data-v-cc4daab7="" value="opt1">Option 1</option>
    <option data-v-cc4daab7="" value="opt2">Option 2</option>
  </select>
  <!--v-if--><span data-v-cc4daab7="" class="absolute inset-y-0 end-0 flex items-center pointer-events-none px-2.5">Trailing slot</span>
</div>"
`;

exports[`Select > renders with trailing slot correctly 1`] = `
"<div data-v-cc4daab7="" class=""><select data-v-cc4daab7="" class="">
    <option data-v-cc4daab7="" value="opt1">Option 1</option>
    <option data-v-cc4daab7="" value="opt2">Option 2</option>
  </select>
  <!--v-if--><span data-v-cc4daab7="" class="absolute inset-y-0 end-0 flex items-center pointer-events-none px-2.5">Trailing slot</span>
</div>"
`;
